[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/core/CardViewer/CardLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/core/CardViewer/DeckBuilder/QuantityNumberButton.gd" type="Script" id=2]
[ext_resource path="res://src/core/IntegerLineEdit.gd" type="Script" id=3]
[ext_resource path="res://src/core/CardViewer/DeckBuilder/DBListCardObject.gd" type="Script" id=4]
[ext_resource path="res://fonts/comfortaa/Comfortaa-Bold.ttf" type="FontFile" id=5]
[ext_resource path="res://src/core/CardViewer/CVCardObjectFont.tres" type="FontFile" id=6]

[sub_resource type="FontFile" id=1]
size = 12
use_filter = true
font_data = ExtResource( 5 )

[node name="DBListCardObject" type="HBoxContainer"]
offset_right = 628.0
offset_bottom = 20.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quantity" type="HBoxContainer" parent="."]
offset_right = 150.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 150, 0 )
theme_override_constants/separation = 0

[node name="0" type="Button" parent="Quantity"]
offset_right = 19.0
offset_bottom = 20.0
theme_override_fonts/font = SubResource( 1 )
toggle_mode = true
text = "0"
script = ExtResource( 2 )

[node name="1" type="Button" parent="Quantity"]
visible = false
offset_left = 19.0
offset_right = 36.0
offset_bottom = 20.0
theme_override_fonts/font = SubResource( 1 )
toggle_mode = true
text = "1"
script = ExtResource( 2 )

[node name="2" type="Button" parent="Quantity"]
visible = false
offset_left = 19.0
offset_right = 38.0
offset_bottom = 20.0
theme_override_fonts/font = SubResource( 1 )
toggle_mode = true
text = "2"
script = ExtResource( 2 )

[node name="3" type="Button" parent="Quantity"]
visible = false
offset_left = 19.0
offset_right = 38.0
offset_bottom = 20.0
theme_override_fonts/font = SubResource( 1 )
toggle_mode = true
text = "3"
script = ExtResource( 2 )

[node name="4" type="Button" parent="Quantity"]
visible = false
offset_left = 19.0
offset_right = 39.0
offset_bottom = 20.0
theme_override_fonts/font = SubResource( 1 )
toggle_mode = true
text = "4"
script = ExtResource( 2 )

[node name="5" type="Button" parent="Quantity"]
visible = false
offset_left = 19.0
offset_right = 39.0
offset_bottom = 20.0
theme_override_fonts/font = SubResource( 1 )
toggle_mode = true
text = "5"
script = ExtResource( 2 )

[node name="IntegerLineEdit" type="LineEdit" parent="Quantity"]
visible = false
offset_left = 19.0
offset_right = 77.0
offset_bottom = 24.0
placeholder_text = "0"
script = ExtResource( 3 )

[node name="Plus" type="Button" parent="Quantity"]
visible = false
offset_left = 19.0
offset_right = 38.0
offset_bottom = 24.0
theme_override_fonts/font = SubResource( 1 )
text = "+"

[node name="Minus" type="Button" parent="Quantity"]
visible = false
offset_left = 19.0
offset_right = 38.0
offset_bottom = 24.0
theme_override_fonts/font = SubResource( 1 )
text = "-"

[node name="CardLabel" parent="." instance=ExtResource( 1 )]
offset_left = 154.0
offset_right = 524.0
offset_bottom = 20.0

[node name="Type" type="Label" parent="."]
offset_left = 528.0
offset_top = 1.0
offset_right = 628.0
offset_bottom = 19.0
custom_minimum_size = Vector2( 100, 0 )
theme_override_fonts/font = ExtResource( 6 )
text = "Blue"

[connection signal="pressed" from="Quantity/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Quantity/Minus" to="." method="_on_Minus_pressed"]
